chess html changes

--- a/chess.html
+++ b/chess.html
@@ -21,7 +21,7 @@
             <li>chess openings</li>
             <li>Chess middle game</li>
             <li>chess gambits</li>
-            <li>chess endgame</li>
+            <li>chess finalgame</li>
         </ul>
     </div>
 
