removed h2-'login to facebook' from fb login form

--- a/fblayout.html
+++ b/fblayout.html
@@ -19,7 +19,7 @@
 
         <div id="form">
             <form>
-                <h2>Log in to facebook</h2>
+                <!-- <h2>Log in to facebook</h2> -->
                 <input type="text" name="userid" placeholder="Email address or phone number">
                 <br><br>
                 <input type="password" name="pwd" placeholder="Password">
